--- a/index.html
+++ b/index.html
@@ -151,13 +151,15 @@
                 <div class="group"><label>DtA %</label><input type="number" id="dta" placeholder=""></div>
                 <div class="group"><label>DtH %</label><input type="number" id="dth" placeholder=""></div>
             </div>
+
+            <div class="section-title">4. %-Rate Enemies for Calculation</div>
             <div class="input-block">
                 <div class="group"><label style="color:var(--orange)">HS-Rate %</label><input type="number" id="h-rate" placeholder="" style="border-color:var(--orange)"></div>
-                <div class="group"><label style="color:var(--orange)">OOC-Rate %</label><input type="number" id="d-rate" placeholder="" style="border-color:var(--orange)"></div>
+                <div class="group"><label style="color:var(--orange)">DTTOOC-Rate %</label><input type="number" id="d-rate" placeholder="" style="border-color:var(--orange)"></div>
                 <div class="group"><label style="color:var(--orange)">Armor-Rate %</label><input type="number" id="a-rate" placeholder="" style="border-color:var(--orange)"></div>
             </div>
 
-            <div class="section-title">4. Amplifiers</div>
+            <div class="section-title">5. Amplifiers</div>
             <div class="input-block">
                 <div class="group"><label>Amp 1 (e.g. Striker, Glass Cannon) %</label><input type="number" id="m1" placeholder=""></div>
                 <div class="group"><label>Amp 2 (e.g. Striker, Glass Cannon) %</label><input type="number" id="m2" placeholder=""></div>
@@ -293,7 +295,6 @@
 
         const wDmg = b * (1 + (awd + swd)/100) * (1 + twd/100);
         
-        // Target Logic for Shooting Range
         const stMult = (1 + ooc) * (currentTarget === 'elite' ? (1 + dta) : (1 + dth)) * m;
 
         const omkElement = document.getElementById('res-omk');
