--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         .hint-text { font-size: 11px; color: #888; margin-top: -10px; margin-bottom: 15px; padding-left: 5px; font-style: italic; }
         .hint-text i { color: var(--orange); margin-right: 5px; }
 
-        label { font-size: 11px; font-weight: 700; color: #fff; margin-bottom: 4px; text-transform: uppercase; white-space: nowrap; }
+        label { font-size: 11px; font-weight: 700; color: #fff; margin-bottom: 4px; text-transform: uppercase; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
         input, select { background: #000; border: 1px solid #333; color: #fff; padding: 8px 12px; border-radius: 6px; font-size: 15px; font-family: 'JetBrains Mono'; width: 100%; box-sizing: border-box; }
         
         input:focus { border-color: var(--orange); outline: none; }
@@ -144,8 +144,7 @@
             <div class="input-block">
                 <div class="group"><label>AWD (All Weapon) %</label><input type="number" id="awd" placeholder=""></div>
                 <div class="group"><label>SWD (Weapon Type) %</label><input type="number" id="swd" placeholder=""></div>
-                <div class="group"><label>TWD (Total Wep) %</label><input type="number" id="twd" placeholder=""></div>
-                <div class="group"></div>
+                <div class="group" style="grid-column: span 2;"><label>TWD (e.g. Obliterate) %</label><input type="number" id="twd" placeholder=""></div>
             </div>
 
             <div class="section-title">3. Combat Stats & Rates</div>
@@ -169,10 +168,10 @@
 
             <div class="section-title">5. Amplifiers</div>
             <div class="input-block">
-                <div class="group"><label>Amp 1 %</label><input type="number" id="m1" placeholder=""></div>
-                <div class="group"><label>Amp 2 %</label><input type="number" id="m2" placeholder=""></div>
-                <div class="group"><label>Amp 3 %</label><input type="number" id="m3" placeholder=""></div>
-                <div class="group"><label>Amp 4 %</label><input type="number" id="m4" placeholder=""></div>
+                <div class="group"><label title="Amp 1 (e.g. Striker, Glass Cannon) %">Amp 1 (Striker...) %</label><input type="number" id="m1" placeholder=""></div>
+                <div class="group"><label title="Amp 2 (e.g. Striker, Glass Cannon) %">Amp 2 (Striker...) %</label><input type="number" id="m2" placeholder=""></div>
+                <div class="group"><label title="Amp 3 (e.g. Striker, Glass Cannon) %">Amp 3 (Striker...) %</label><input type="number" id="m3" placeholder=""></div>
+                <div class="group"><label title="Amp 4 (e.g. Striker, Glass Cannon) %">Amp 4 (Striker...) %</label><input type="number" id="m4" placeholder=""></div>
             </div>
             
             <div class="input-block" style="border: 1px dashed var(--orange); grid-template-columns: repeat(3, 1fr);">
