--- a/index.html
+++ b/index.html
@@ -160,18 +160,18 @@
 
             <div class="section-title">4. %-Rate Enemies for Calculation</div>
             <div class="input-block">
-                <div class="group"><label style="color:var(--orange)">HS-Rate %</label><input type="number" id="h-rate" placeholder="" style="border-color:var(--orange)"></div>
-                <div class="group"><label style="color:var(--orange)">DTTOOC-Rate %</label><input type="number" id="d-rate" placeholder="" style="border-color:var(--orange)"></div>
-                <div class="group"><label style="color:var(--orange)">Armor-Rate %</label><input type="number" id="a-rate" placeholder="" style="border-color:var(--orange)"></div>
+                <div class="group"><label style="color:var(--orange)">HS-Rate % (20% recom.)</label><input type="number" id="h-rate" placeholder="" style="border-color:var(--orange)"></div>
+                <div class="group"><label style="color:var(--orange)">DTTOOC-Rate % (60% recom.)</label><input type="number" id="d-rate" placeholder="" style="border-color:var(--orange)"></div>
+                <div class="group"><label style="color:var(--orange)">Armor-Rate % (80% recom.)</label><input type="number" id="a-rate" placeholder="" style="border-color:var(--orange)"></div>
                 <div class="group"></div>
             </div>
 
             <div class="section-title">5. Amplifiers</div>
             <div class="input-block">
-                <div class="group"><label title="Amp 1 (e.g. Striker, Glass Cannon) %">Amp 1 (Striker...) %</label><input type="number" id="m1" placeholder=""></div>
-                <div class="group"><label title="Amp 2 (e.g. Striker, Glass Cannon) %">Amp 2 (Striker...) %</label><input type="number" id="m2" placeholder=""></div>
-                <div class="group"><label title="Amp 3 (e.g. Striker, Glass Cannon) %">Amp 3 (Striker...) %</label><input type="number" id="m3" placeholder=""></div>
-                <div class="group"><label title="Amp 4 (e.g. Striker, Glass Cannon) %">Amp 4 (Striker...) %</label><input type="number" id="m4" placeholder=""></div>
+                <div class="group"><label title="Amp 1 (e.g. Striker, Glass Cannon) %">Amp 1 (e.g. Striker, Glass Cannon) %</label><input type="number" id="m1" placeholder=""></div>
+                <div class="group"><label title="Amp 2 (e.g. Striker, Glass Cannon) %">Amp 2 (e.g. Striker, Glass Cannon) %</label><input type="number" id="m2" placeholder=""></div>
+                <div class="group"><label title="Amp 3 (e.g. Striker, Glass Cannon) %">Amp 3 (e.g. Striker, Glass Cannon) %</label><input type="number" id="m3" placeholder=""></div>
+                <div class="group"><label title="Amp 4 (e.g. Striker, Glass Cannon) %">Amp 4 (e.g. Striker, Glass Cannon) %</label><input type="number" id="m4" placeholder=""></div>
             </div>
             
             <div class="input-block" style="border: 1px dashed var(--orange); grid-template-columns: repeat(3, 1fr);">
