--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="section-title">0. Calculate Base Damage</div>
             <div class="hint-text"><i class="fas fa-info-circle"></i>Ingame: Open Inventory → Stats → Copy "Weapon Damage" & "Weapon Type Damage Bonus"</div>
             <div class="input-block">
-                <div class="group"><label>Menu Damage</label><input type="number" id="menu-dmg" placeholder=""></div>
+                <div class="group"><label>Weapon Damage</label><input type="number" id="menu-dmg" placeholder=""></div>
                 <div class="group"><label>AWD (All) %</label><input type="number" id="menu-awd" placeholder=""></div>
                 <div class="group"><label>SWD (Type) %</label><input type="number" id="menu-swd" placeholder=""></div>
                 <div class="group"><label style="color:var(--orange)">Result: Base Damage</label><input type="text" id="calc-base-res" readonly style="border-color:var(--orange); color:var(--orange); font-weight:bold;"></div>
@@ -436,3 +436,4 @@
 </script>
 </body>
 </html>
+
