--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         .input-block { display: grid; grid-template-columns: repeat(4, 1fr); gap: 12px; background: var(--glass); padding: 18px; border-radius: 12px; margin-bottom: 15px; }
         .group { display: flex; flex-direction: column; }
         
-        .hint-text { font-size: 11px; color: #888; margin-top: -10px; margin-bottom: 15px; padding-left: 5px; font-style: italic; }
+        .hint-text { font-size: 11px; color: #888; margin-top: -10px; margin-bottom: 15px; padding-left: 5px; font-style: italic; line-height: 1.4; }
         .hint-text i { color: var(--orange); margin-right: 5px; }
 
         label { font-size: 11px; font-weight: 700; color: #fff; margin-bottom: 4px; text-transform: uppercase; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
@@ -91,7 +91,11 @@
     <div class="main-grid">
         <div class="card">
             <div class="section-title">0. Calculate Base Damage</div>
-            <div class="hint-text"><i class="fas fa-info-circle"></i>Ingame: Open Inventory → Stats → Copy "Weapon Damage" & "Weapon Type Damage Bonus"</div>
+            <div class="hint-text">
+                <i class="fas fa-info-circle"></i> 
+                <strong>Note:</strong> Only use this if your weapon is NOT in the presets below. <br>
+                Open Inventory → Stats → Copy "Weapon Damage", "All Weapon Damage" & "Specific Weapon Damage"
+            </div>
             <div class="input-block">
                 <div class="group"><label>Weapon Damage</label><input type="number" id="menu-dmg" placeholder=""></div>
                 <div class="group"><label>AWD (All Weapon Damage %)</label><input type="number" id="menu-awd" placeholder=""></div>
